# rgb

./: .gitignore  CMakeLists.txt  README.md  cascade.cpp  cycle.cpp  makefile  raindrop.cpp  random.cpp  rgb.cpp  rgb.h
apps/: CMakeLists.txt  cycle.cpp
src/: CMakeLists.txt  cascade.cpp  raindrop.cpp  random.cpp  rgb.pc.in
src/rgb/: CMakeLists.txt  rgb.cpp  rgb.h
